<resources>
    <string name="app_name">LoginApplication</string>
    <string name="tvTitle">Añadir Artículo</string>

    <string name="ed_ArticleName">Nombre del artículo</string>

    <string name="tvOther">Inicia sesión a través de otras plataformas</string>
    <string name="tieEmailSignInHint">Email</string>
    <string name="tiePasswordSignInHint">Contraseña</string>

    <string name="tieEmailSignUpHint">Email</string>
    <string name="tiePasswordSignUpHint">Contraseña</string>
    <string name="tieConfirmPasswordSignUpHint">Confirmar contraseña</string>
    <string name="tvTipo_text">Tipo</string>
    <string name="tvProfile">Perfiles</string>
    <string name="tvImportant_text">Calificación usuario</string>

    <string name="btnLogin">Iniciar sesión</string>
</resources>